// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `

<div class="ais-SortBy">
  <select class="ais-SortBy-select">
    <option class="ais-SortBy-option"
            value="some_index"
    >
      Relevance
    </option>
    <option class="ais-SortBy-option"
            value="some_index_cool"
    >
      Coolness ascending
    </option>
    <option class="ais-SortBy-option"
            value="some_index_quality"
    >
      Quality ascending
    </option>
  </select>
</div>

`;

exports[`renders with scoped slots 1`] = `

<div class="ais-SortBy">
  <select>
    <option value="some_index">
      Relevance
    </option>
    <option value="some_index_cool">
      Coolness ascending
    </option>
    <option value="some_index_quality">
      Quality ascending
    </option>
  </select>
</div>

`;
